# bwm

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
include/bwm/bench/: protocol.hpp
include/bwm/codec/: codec.hpp
include/bwm/core/: error.hpp  expected.hpp  types.hpp
include/bwm/medium/: medium.hpp
include/bwm/scheduler/: scheduler.hpp
src/: main.cpp
src/app/: config_types.hpp  engine.cpp  engine.hpp  math_utils.cpp  math_utils.hpp  runtime_runner.cpp  runtime_runner.hpp
src/bench/: protocol.cpp
src/codec/: codec.cpp  runtime_codec.cpp  runtime_codec.hpp
src/generator/: low_entropy_generator.cpp  low_entropy_generator.hpp
src/medium/: medium.cpp
src/scheduler/: scheduler.cpp
src/sink/: hash_sink.cpp  hash_sink.hpp
subprojects/: argparse.wrap  lz4.wrap  tl-expected.wrap  xxhash.wrap  zstd.wrap
tests/: meson.build
tests/integration/: disk_e2e_validation.sh  tcp_loopback_e2e_validation.sh
tests/unit/: codec_roundtrip_tests.cpp  generator_determinism_tests.cpp  medium_factory_tests.cpp  protocol_metrics_tests.cpp  protocol_runner_tests.cpp  scheduler_factory_tests.cpp
